# resume-generator

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: code-quality.yml  mkdocs-build.yml  mkdocs-deploy.yml
docs/: index.md
docs/home/: architecture.md  getting-started.md  index.md
examples/: kitchensink.yaml  profile_headline.yaml
examples/pure_fpdf/: custom_fonts.py
examples/resgen/: builder_example.py  font_example.py  test.yaml
resgen/: __main__.py
resgen/components/: component.py  document.py  experience.py  font.py  horizontal_list.py  image.py  list.py  profile.py  profile_description.py  rating.py
resgen/console/: cli.py
resgen/core/: builder.py  colours.py  component.py  document.py  font.py  page_settings.py  style.py  yamlconfig.py
resume_generator/: document.py
search/: search_index.json
tests/parser/: mock_yaml.yaml  test_component.py  test_yamlconfig.py
tests/resgen/: test_main.py
tests/resgen/components/: test_experience.py  test_list.py  test_profile.py  test_rating.py
tests/resgen/console/: test_cli.py
tests/resgen/core/: mock_component.py  test_builder.py  test_component.py  test_document.py  test_font.py  test_image.py  test_style.py  test_yamlconfig.py
tests/test_utils/: test_list.py
