[tool.poetry]
name = "resume-generator"
version = "0.0.1"
description = "Generate resume based on configuration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "resume_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
fpdf2 = "^2.7.4"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
mypy = "^1.4.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
