[tool.poetry]
name = "resgen"
version = "0.0.1"
description = "Generate resume based on configuration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "resgen"}]

[tool.poetry.scripts]
resgen = 'resgen.console.cli:run'

[tool.poetry.dependencies]
python = "^3.10"
fpdf2 = "^2.7.4"
pydantic = "^1.10.9"
pyyaml = "^6.0"
pyyaml-include = "^1.3.1"

[tool.coverage.run]
omit = ["tests/*", "examples/*"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
mypy = "^1.4.0"
pylint = "^2.17.4"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.21"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
